# gnome-latex

./: AUTHORS  CMakeLists.txt  ChangeLog  GOALS  HACKING  HISTORY.md  INSTALL  Makefile  Makefile.am  NEWS  README  TODO  configure.ac  gnome-latex.doap  latexila.doap  main.c  ui.xml
data/: CMakeLists.txt  Makefile.am  latexhelp.html  latexila.desktop  org.gnome.gnome-latex.appdata.xml.in  org.gnome.gnome-latex.desktop.in  org.gnome.gnome-latex.gschema.xml.in  org.gnome.latexila.appdata.xml.in  org.gnome.latexila.desktop.in  org.gnome.latexila.desktop.in.in
data/build_tools/: build_tools.xml
data/icons/: Makefile.am
data/icons/128x128/apps/: Makefile.am
data/icons/16x16/apps/: Makefile.am
data/icons/22x22/apps/: Makefile.am
data/icons/24x24/apps/: Makefile.am
data/icons/256x256/apps/: Makefile.am
data/icons/32x32/apps/: Makefile.am
data/icons/48x48/apps/: Makefile.am
data/icons/scalable/apps/: Makefile.am
data/icons/symbolic/apps/: Makefile.am
data/images/: Makefile.am
data/images/arrows/: CMakeLists.txt
data/images/delimiters/: CMakeLists.txt
data/images/generate-symbols/: generate_symbols.vala
data/images/icons/: CMakeLists.txt
data/images/logo/: CMakeLists.txt
data/images/operators/: CMakeLists.txt
data/images/templates/: CMakeLists.txt
data/templates/: article-fr.tex  book-fr.tex  letter-fr.tex  report-fr.tex
docs/reference/: Makefile.am  gnome-latex-docs.xml  gnome-latex-sections.txt  latexila-docs.xml  latexila-sections.txt
flatpak/: org.gnome.gnome-latex.json
help/: Makefile.am
help/C/: build_tools.page  completion.page  index.page  projects.page  spell_checking.page  structure.page  synctex.page
help/cs/: cs.po
help/de/: de.po
help/es/: es.po
help/hu/: hu.po
help/pl/: pl.po
help/pt_BR/: pt_BR.po
help/sv/: sv.po
images/: CMakeLists.txt
images/greek/: CMakeLists.txt
images/icons/: CMakeLists.txt
images/misc-math/: CMakeLists.txt
man/: Makefile.am  gnome-latex.1  gnome-latex.1.xml  latexila.1  latexila.1.xml
old-repository/: AUTHORS  CMakeLists.txt  ChangeLog  HACKING  TODO
old-repository/data/: CMakeLists.txt
old-repository/data/images/: CMakeLists.txt
old-repository/data/images/logo/: CMakeLists.txt
old-repository/data/images/misc-text/: CMakeLists.txt
old-repository/data/images/relations/: CMakeLists.txt
old-repository/man/: CMakeLists.txt  latexila.1  latexila.1.xml
old-repository/po/: fr.po  latexila.pot
old-repository/src/: CMakeLists.txt  callbacks.c  callbacks.h  cb_latex.c  cb_latex.h  external_commands.c  external_commands.h  latex_output_filter.h  log.c  main.c  prefs.h  print.h  symbols.h  templates.c  templates.h  tool_menu_action.c  tool_menu_action.h  ui.c  ui.h  utils.h
po/: LINGUAS  POTFILES.in  POTFILES.skip  ca.po  cs.po  de.po  el.po  eo.po  es.po  eu.po  fr.po  french.po  hu.po  id.po  latexila.mo  latexila.pot  lt.po  lv.po  nl.po  pl.po  pt_BR.po  ro.po  sr.po  sr@latin.po  sv.po  uk.po
samples/: README  sample-build-tools.tex  sample-completion.tex  sample-structure.tex  sample.tex
src/: CMakeLists.txt  Makefile  Makefile.am  actions.c  actions.h  app_settings.vala  bottom_panel.vala  build_tool_dialog.vala  build_tools_preferences.vala  callbacks.c  callbacks.h  cb_latex.c  cb_latex.h  clean_build_files.vala  completion.vala  config.h.cmake  custom_statusbar.vala  dialogs.vala  document.vala  document_structure.vala  document_tab.vala  document_view.vala  documents_panel.vala  encodings.vala  error.c  error.h  error_entry.vala  external_commands.c  external_commands.h  factory.vala  file_browser.c  file_browser.h  file_browser.vala  finance.vala  glatex.gresource.xml  glatex_app.vala  latex_menu.vala  latex_output_filter.c  latex_output_filter.h  latexila.gresource.xml  (+42 more)
src/evince/: Makefile.am
src/liblatexila/: Makefile.am  latexila-build-job.c  latexila-build-job.h  latexila-build-tool.c  latexila-build-tool.h  latexila-build-tools-default.c  latexila-build-tools-default.h  latexila-build-tools-personal.c  latexila-build-tools-personal.h  latexila-build-tools.c  latexila-build-tools.h  latexila-build-view.c  latexila-build-view.h  latexila-latex-commands.c  latexila-latex-commands.h  latexila-latex-menu.c  latexila-latex-menu.h  latexila-post-processor-all-output.c  latexila-post-processor-all-output.h  latexila-post-processor-latex.c  latexila-post-processor-latex.h  latexila-post-processor-latexmk.c  latexila-post-processor-latexmk.h  latexila-post-processor.c  latexila-post-processor.h  latexila-synctex.c  latexila-synctex.h  latexila-templates-common.c  latexila-templates-common.h  latexila-templates-default.c  latexila-templates-default.h  latexila-templates-dialogs.c  latexila-templates-dialogs.h  latexila-templates-manage-dialog.c  latexila-templates-manage-dialog.h  latexila-templates-personal.c  latexila-templates-personal.h  latexila-types.h  latexila-utils.c  latexila-utils.h  (+3 more)
src/ui/: Makefile.am  gnome-latex.adwaita.css  menus.ui  preferences_dialog.ui  ui.xml
templates/: CMakeLists.txt
tests/: Makefile.am  build-tools.gresource.xml  test-build-tools.c  test-utils.c
