ADD_SUBDIRECTORY(icons)
ADD_SUBDIRECTORY(greek)
ADD_SUBDIRECTORY(arrows)
ADD_SUBDIRECTORY(relations)
ADD_SUBDIRECTORY(operators)
ADD_SUBDIRECTORY(delimiters)
ADD_SUBDIRECTORY(misc-math)
ADD_SUBDIRECTORY(misc-text)
ADD_SUBDIRECTORY(templates)

FILE(GLOB images *.png)
INSTALL(FILES ${images} DESTINATION ${DATA_DIR}/images)
